--- a/config.toml
+++ b/config.toml
@@ -1,33 +1,74 @@
-# Author:  		Jude de Villiers
-# Origin:  		E&E Engineering - Stellenbosch University
-# For:				Supertools, Coldflux Project - IARPA
-# Created: 		2019-05-09
+# Author:  		 Jude de Villiers
+# Origin:  		 E&E Engineering - Stellenbosch University
+# For:				 Supertools, Coldflux Project - IARPA
+# Created: 		 2019-09-09
 # Modified:
-# license: 
+# license:
 # Description: Configuration file for defining stuffs
 # File:				 config.toml
 
-# version = 0.3
+# version = 0.1
 
-# Optional run parameters which can be utilised instead of CLI parameters
 [run_parameters]
-	# current possible commands: SFQABC; ABC; SFQblif
-	# Command     = "SFQABC"
-	# Command     = "ABC"
-	Command     = "SFQblif"
+	Command   = "blif2gds" # verilog2gds; blif2gds; runABC;
 
-	# SFQblif
-	# blifFileName = "data/blif/rca2.blif"
-	blifFileName = "data/blif/adder3bit.blif"
-	# blifFileName = "data/blif/adder6bit.blif"
+	# Working directory, all file names will be referenced with this
+	work_dir = "data/adder3bit/"
+	# work_dir = "data/adder6bit/"
+	# work_dir = "data/rca2/"
 
-	# ABC
-	# veriFileName = "data/verilog/rca2.v"
-	# glibFileName = "data/abc/abc.genlib"
+	gds_file  = "outGDS.gds" # GDS file to be created
+	blif_file = "adder3bit.blif" # Standard blif that will be converted to SFQblif
+	# sfqblif_file = "" # The SFQblif file that will be converted to GDS
+	# veri_file = ""	# Verilog file for ABC to convert to a standard blif
+	# cell_dis  = "LSmitll.genlib" # cell/gate description for ABC
+	cell_dis_gds = "LSmitll_cell_lib.toml"
+	# NOTE: all directories are relative to the current directory
 
-	# SQFABC
-	# veriFileName = "data/verilog/rca2.v"
-	# glibFileName = "data/abc/abc.genlib"
+[wafer_parameters]
+	vertical_gap = 50 # Spacing between cells
+	horizontal_gap = 50 # Spacing between cells
+	row_align = "left" # Row alignment {left, centre, right, justify}
 
-	# Output file
-	# outFileName = "data/results/JoSIM_HASH_KSA4_route_opt.cir"
+[gate_parameters]
+	port_size   = [4.5, 4.5] 				# port(pin) size [x, y]
+	ptl_width   = 4.5								# The width of the PLT track/route
+	via_size    = [4.5, 4.5]				# PTL via size [x, y]
+	bias_p_size = [2, 2]						# Baising pillar size [x, y]
+
+# The arrays shows the pins of the cells for the SPICE sub-circuits.
+# The order of the pins/ports are important due to mapping
+[LSmitll_netlist]
+	LSMITLL_AND2T   = ["IN_CLK", "IN_1", "IN_2", "OUT"]
+	LSmitll_DCSFQ   = ["IN", "OUT"]
+	LSMITLL_DFFT    = ["IN", "IN_CLK", "OUT"]
+	LSMITLL_JTLT    = ["IN", "OUT"]
+	LSmitll_MERGET  = ["IN_1", "IN_2", "OUT"]
+	LSMITLL_NDROT   = ["IN_SET", "IN_RESET", "IN_CLK", "OUT"]
+	LSMITLL_NOTT    = ["IN", "IN_CLK", "OUT"]
+	LSMITLL_OR2T    = ["IN_CLK", "IN_1", "IN_2", "OUT"]
+	LSmitll_SFQDC1  = ["IN", "OUT"]
+	MITLL_SPLITT    = ["IN", "OUT_1", "OUT_2"]
+	LSMITLL_XORT    = ["IN_CLK", "IN_1", "IN_2", "OUT"]
+	PAD             = ["P1"]																		# does NOT EXIST, used for mapping in/out pins
+
+# GDS file location of the cell library
+[LSmitll_GDS_File_Location]
+	# NETLIST = "data/cell_lib/LSmitll/LSmitll_all.cir"
+	DFFT    = "data/cell_lib/LSmitll/LSmitll_DFFT.gds"
+	JTLT    = "data/cell_lib/LSmitll/LSmitll_jtlt.gds"
+	MERGET  = "data/cell_lib/LSmitll/LSmitll_MERGET.gds"
+	NOTT    = "data/cell_lib/LSmitll/LSmitll_NOTT.gds"
+	SPLITT  = "data/cell_lib/LSmitll/LSmitll_SPLITT.gds"
+	AND2T   = "data/cell_lib/LSmitll/LSmitll_AND2T.gds"
+	OR2T    = "data/cell_lib/LSmitll/LSmitll_OR2T.gds"
+	XOR2T   = "data/cell_lib/LSmitll/LSmitll_XORT.gds"
+	NDROT   = "data/cell_lib/LSmitll/LSmitll_NDROT.gds"
+
+# [NOTES]
+# ALL MEASUREMENTS are in um.
+# Pin location is at the CENTRE of the port.
+# Routing connection to the pin must be a PTL on layer M3 with M2 and M4 as shielding groundplanes.
+# The biasing pillars are on layer M5.
+# Pillars are considered as obstructions.
+# The the names for the gates in the .genlib file must match the gates of the gates in the runParameter.toml(this) file
