--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,16 +4,17 @@
 	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
 	"version": "0.2.0",
 	"configurations": [
+
 		{
 			"name": "(gdb) Launch",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "enter program name, for example ${workspaceFolder}/a.out",
-			"args": ["-c"],
+			"program": "${workspaceFolder}/build/ViPeR",
+			"args": ["-c ./config.toml"],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
-			"externalConsole": false,
+			"externalConsole": true,
 			"MIMode": "gdb",
 			"setupCommands": [
 				{
