--- a/config.toml
+++ b/config.toml
@@ -13,13 +13,14 @@
 	Command   = "blif2gds" # verilog2gds; blif2gds; runABC;
 
 	# Working directory, all file names will be referenced with this
-	work_dir = "data/adder3bit/"
+	# work_dir = "data/adder3bit/"
 	# work_dir = "data/adder6bit/"
-	# work_dir = "data/rca2/"
+	work_dir = "data/rca2/"
 
 	gds_file  = "outGDS.gds"     # GDS file to be created
-	blif_file = "adder3bit.blif" # Standard blif that will be converted to SFQblif
-	# blif_file = "rca2.blif" # Standard blif that will be converted to SFQblif
+	# blif_file = "adder3bit.blif" # Standard blif that will be converted to SFQblif
+	# blif_file = "adder6bit.blif" # Standard blif that will be converted to SFQblif
+	blif_file = "rca2.blif" # Standard blif that will be converted to SFQblif
 	# sfqblif_file = ""            # The SFQblif file that will be converted to GDS
 	# veri_file = ""	              # Verilog file for ABC to convert to a standard blif
 	# cell_dis  = "LSmitll.genlib" # cell/gate description for ABC
@@ -27,12 +28,12 @@
 	# NOTE: all directories are relative to the current directory
 
 [wafer_parameters]
-	vertical_gap = 0     # Spacing between cells
-	horizontal_gap = 0    # Spacing between cells
-	cell_height = 50      # The height of the cells
-	row_align = "justify" # Row alignment {left, centre, justify}
-	pad_ver_gap = 30      # The vertical distance between the pads and the gates/circuit
-	pad_hor_gap = 0      # the horizontal gap between the pins/pads
+	vertical_gap   = 0         # Spacing between cells
+	horizontal_gap = 0         # Spacing between cells
+	cell_height    = 50        # The height of the cells
+	row_align      = "justify" # Row alignment {left, centre, justify}
+	pad_ver_gap    = 30        # The vertical distance between the pads and the gates/circuit
+	pad_hor_gap    = 0         # the horizontal gap between the pins/pads
 
 
 # [NOTES]
