LEF/DEF file integration; Basic qRouter integration; Bug fixing; Clock placement bug fixed; cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,8 @@
             "-c",
             "config.toml"
         ]
-    }
+    },
+    "C_Cpp.default.configurationProvider": "vector-of-bool.cmake-tools",
+    "cmake.configureOnOpen": false
 
 }
