--- a/config.toml
+++ b/config.toml
@@ -54,9 +54,10 @@
 [Wafer_Parameters]
 	x_offset       = 5
 	y_offset       = 5
-	vertical_gap   = 0         # Spacing between cells
-	horizontal_gap = 40         # Spacing between cells
+	grid_size			 = 10				 # The grid that tracks and gate stick to
+	vertical_gap   = 10         # Spacing between cells
+	horizontal_gap = 10         # Spacing between cells
 	cell_height    = 50        # The height of the cells
-	row_align      = "left"    # Row alignment {left, centre, justify}
+	row_align      = "justifyFlush"    # Row alignment {left, centre, justify, justifyFlush}
 	pad_ver_gap    = 35        # The vertical distance between the pads and the gates/circuit
-	pad_hor_gap    = 10        # the horizontal gap between the pins/pads
+	pad_hor_gap    = 0        # the horizontal gap between the pins/pads
