Allowing variable size splitters; Improved clocking;

--- a/config.toml
+++ b/config.toml
@@ -1,93 +1,100 @@
-# Author:  		 Jude de Villiers
-# Origin:  		 E&E Engineering - Stellenbosch University
-# For:				 Supertools, Coldflux Project - IARPA
-# Created: 		 2019-09-09
+# Author:      Jude de Villiers
+# Origin:      E&E Engineering - Stellenbosch University
+# For:         Supertools, Coldflux Project - IARPA
+# Created:     2019-09-09
 # Modified:
 # license:
 # Description: Configuration file for defining stuffs
-# File:				 config.toml
+# File:        config.toml
 
 # version = 0.1
 
 [run_parameters]
-	Command   = "blif2gds"
-	# Command   = "gdf2lef"
-	# Command   = "verilog2gds"
-	# Command   = "runABC"
+  # Command   = "blif2gds"
+  # Command   = "gdf2lef"
+  Command   = "verilog2gds"
+  # Command   = "runABC"
 
 
 [Circuit_Files]
-	# work_dir  = "data/.../"   # Working directory, all file names will be referenced with this
-	# blif_file = ".blif"       # Standard blif that will be converted to SFQblif
-	# veri_file = ".v"	        # Verilog file for ABC to convert to a standard blif
+  # work_dir  = "data/.../"   # Working directory, all file names will be referenced with this
+  # blif_file = ".blif"       # Standard blif that will be converted to SFQblif
+  # veri_file = ".v"          # Verilog file for ABC to convert to a standard blif
 
-	gds_file    = "outGDS.gds"     # GDS file to be created
+  gds_file    = "outGDS.gds"     # GDS file to be created
 
-	# work_dir  = "data/adder3bit/"
-	# blif_file = "adder3bit.blif"
+  # work_dir  = "data/adder3bit/"
+  # blif_file = "adder3bit.blif"
 
-	# work_dir  = "data/adder6bit/"
-	# blif_file = "adder6bit.blif"
+  # work_dir  = "data/adder6bit/"
+  # blif_file = "adder6bit.blif"
 
-	# work_dir  = "data/rca2/"
-	# blif_file = "rca2.blif"
+  # work_dir  = "data/rca2/"
+  # blif_file = "rca2.blif"
 
-	# work_dir    = "data/KSA4/"
-	# blif_file   = "KSA4.blif"
-	# veri_file = "KSA4.v"
+  # work_dir    = "data/KSA4/"
+  # blif_file   = "KSA4.blif"
+  # veri_file = "KSA4.v"
 
-	# work_dir  = "data/KSA8/"
-	# veri_file = "KSA8.v"
+  work_dir  = "data/KSA8/"
+  veri_file = "KSA8.v"
 
-	# work_dir    = "data/ID4/"
-	# veri_file = "ID4s.v"
+  # work_dir    = "data/ID4/"
+  # veri_file = "ID4s.v"
 
-	# work_dir    = "data/arrmult4/"
-	# blif_file = "arrmult4.blif"
+  # work_dir    = "data/arrmult4/"
+  # blif_file = "arrmult4.blif"
 
-	work_dir    = "data/c432/"
-	blif_file = "c432.blif"
+  # work_dir    = "data/c432/"
+  # blif_file = "c432.blif"
+
+  # work_dir  = "data/fullAdder/"
+  # veri_file = "fullAdder.v"
 
 [General_Config_File]
-	cell_dis     = "data/LSmitll.genlib"          # Logic cell/gate description for ABC
-	cell_dis_gds = "data/LSmitll_cell_lib.toml"   # Homebrewed description for physical cell layout
-	lef_file     = "data/SUN.lef"                 # Used for converting a GDF(Gate Definition File) to LEF
+  cell_dis     = "data/LSmitll.genlib"          # Logic cell/gate description for ABC
+  cell_dis_gds = "data/LSmitll_cell_lib.toml"   # Homebrewed description for physical cell layout
+  lef_file     = "data/SUN.lef"                 # Used for converting a GDF(Gate Definition File) to LEF
 
 [Layout_Parameters]
-	# RCA2
-	# input_order = ["a0", "b0", "a1", "b1"]
-	# output_order = ["s0", "s1", "s2"]
+  # RCA2
+  # input_order = ["a0", "b0", "a1", "b1"]
+  # output_order = ["s0", "s1", "s2"]
 
-	# # KSA4
-	# input_order  = ["cin", "a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3"]
-	# output_order = ["sum0", "sum1", "sum2", "sum3", "cout"]
+  # KSA4
+  # input_order  = ["cin", "a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3"]
+  # output_order = ["sum0", "sum1", "sum2", "sum3", "cout"]
 
-	# KSA8
-	# input_order  = ["cin", "a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3", "a4", "b4", "a5", "b5", "a6", "b6", "a7", "b7"]
-	# output_order = ["sum0", "sum1", "sum2", "sum3", "sum4", "sum5", "sum6", "sum7", "cout"]
+  # KSA8
+  input_order  = ["cin", "a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3", "a4", "b4", "a5", "b5", "a6", "b6", "a7", "b7"]
+  output_order = ["sum0", "sum1", "sum2", "sum3", "sum4", "sum5", "sum6", "sum7", "cout"]
 
-	# ID4
-	# input_order  = ["X3", "X2", "X1", "X0", "D3", "D2", "D1", "D0"]
-	# output_order = ["Q3", "Q2", "Q1", "Q0", "R3", "R2", "R1", "R0"]
+  # ID4
+  # input_order  = ["X3", "X2", "X1", "X0", "D3", "D2", "D1", "D0"]
+  # output_order = ["Q3", "Q2", "Q1", "Q0", "R3", "R2", "R1", "R0"]
 
-	# arrmult4
-	# input_order  = ["a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3"]
+  # arrmult4
+  # input_order  = ["a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3"]
   # output_order = ["m0", "m1", "m2", "m3", "m4", "m5", "m6", "m7"]
 
-	# c432
-  input_order  = ["G1gat", "G4gat", "G8gat", "G11gat", "G14gat", "G17gat", "G21gat", "G24gat", "G27gat", "G30gat",
-  	"G34gat", "G37gat", "G40gat", "G43gat", "G47gat", "G50gat", "G53gat", "G56gat", "G60gat", "G63gat",
-  	"G66gat", "G69gat", "G73gat", "G76gat", "G79gat", "G82gat", "G86gat", "G89gat", "G92gat", "G95gat",
-  	"G99gat", "G102gat", "G105gat", "G108gat", "G112gat", "G115gat"]
-  output_order = ["G223gat", "G329gat", "G370gat", "G421gat", "G430gat", "G431gat", "G432gat"]
+  # fullAdder
+  # input_order  = ["a", "b", "cin"]
+  # output_order = ["sum", "cout"]
+
+  # c432
+  # input_order  = ["G1gat", "G4gat", "G8gat", "G11gat", "G14gat", "G17gat", "G21gat", "G24gat", "G27gat", "G30gat",
+  #   "G34gat", "G37gat", "G40gat", "G43gat", "G47gat", "G50gat", "G53gat", "G56gat", "G60gat", "G63gat",
+  #   "G66gat", "G69gat", "G73gat", "G76gat", "G79gat", "G82gat", "G86gat", "G89gat", "G92gat", "G95gat",
+  #   "G99gat", "G102gat", "G105gat", "G108gat", "G112gat", "G115gat"]
+  # output_order = ["G223gat", "G329gat", "G370gat", "G421gat", "G430gat", "G431gat", "G432gat"]
 
 [Wafer_Parameters]
-	x_offset       = 5
-	y_offset       = 5
-	grid_size			 = 10				      # The grid that tracks and gate stick to
-	vertical_gap   = 10             # Spacing between cells
-	horizontal_gap = 0             # Spacing between cells
-	cell_height    = 70             # The height of the cells
-	row_align      = "justify" # Row alignment {left, centre, justify, justifyFlush}
-	pad_ver_gap    = 35             # The vertical distance between the pads and the gates/circuit
-	pad_hor_gap    = 0              # the horizontal gap between the pins/pads
+  x_offset       = 5
+  y_offset       = 5
+  grid_size      = 10             # The grid that tracks and gate stick to
+  vertical_gap   = 10             # Spacing between cells
+  horizontal_gap = 0             # Spacing between cells
+  cell_height    = 70             # The height of the cells
+  row_align      = "justify" # Row alignment {left, centre, justify, justifyFlush}
+  pad_ver_gap    = 35             # The vertical distance between the pads and the gates/circuit
+  pad_hor_gap    = 0              # the horizontal gap between the pins/pads
