--- a/config.toml
+++ b/config.toml
@@ -32,12 +32,15 @@
   # work_dir  = "data/rca2/"
   # blif_file = "rca2.blif"
 
-  # work_dir    = "data/KSA4/"
-  # blif_file   = "KSA4.blif"
-  # veri_file = "KSA4.v"
+  work_dir    = "data/KSA4/"
+  blif_file   = "KSA4.blif"
+  veri_file = "KSA4.v"
 
-  work_dir  = "data/KSA8/"
-  veri_file = "KSA8.v"
+  # work_dir  = "data/KSA8/"
+  # veri_file = "KSA8.v"
+
+  # work_dir  = "data/KSA32/"
+  # veri_file = "KSA32.v"
 
   # work_dir    = "data/ID4/"
   # veri_file = "ID4s.v"
@@ -62,12 +65,12 @@
   # output_order = ["s0", "s1", "s2"]
 
   # KSA4
-  # input_order  = ["cin", "a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3"]
-  # output_order = ["sum0", "sum1", "sum2", "sum3", "cout"]
+  input_order  = ["cin", "a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3"]
+  output_order = ["sum0", "sum1", "sum2", "sum3", "cout"]
 
   # KSA8
-  input_order  = ["cin", "a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3", "a4", "b4", "a5", "b5", "a6", "b6", "a7", "b7"]
-  output_order = ["sum0", "sum1", "sum2", "sum3", "sum4", "sum5", "sum6", "sum7", "cout"]
+  # input_order  = ["cin", "a0", "b0", "a1", "b1", "a2", "b2", "a3", "b3", "a4", "b4", "a5", "b5", "a6", "b6", "a7", "b7"]
+  # output_order = ["sum0", "sum1", "sum2", "sum3", "sum4", "sum5", "sum6", "sum7", "cout"]
 
   # ID4
   # input_order  = ["X3", "X2", "X1", "X0", "D3", "D2", "D1", "D0"]
