Added E Verburg as Author

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-# Author:      Jude de Villiers
+# Author:      Jude de Villiers, Edrich Verburg
 # Origin:      E&E Engineering - Stellenbosch University
 # For:         Supertools, Coldflux Project - IARPA
 # Created:     2019-09-09
