--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+#set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64")
+
 project(ViPeR VERSION 0.9)                    # creates ${PROJECT_NAME}
 
 set(SOURCES
